--- a/git.html
+++ b/git.html
@@ -11,6 +11,10 @@
     <div>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, omnis.
     </div>
+    <section>
+        <h2>Section2</h2>
+    </section>
+
 
 
 </body>
