--- a/git.html
+++ b/git.html
@@ -14,7 +14,8 @@
     <section>
         <h2>Section2</h2>
     </section>
-
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore autem amet voluptate asperiores tempora sunt, ullam, aperiam veritatis quia quaerat recusandae magnam aspernatur hic nostrum minus, quos temporibus pariatur eius?
+    </p>
 
 
 </body>
